<resources>
    <string name="app_name">World Wide</string>
    <string name="login_membership_registration_label_text">Register</string>
    <string name="login_button_label">Login</string>
    <string name="new_member_label">New Member?</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_label_text">Login</string>
    <string name="header_image_content_description">Header Image</string>
    <string name="header_image_url">https://goo.gl/AB7sXK</string>
    <string name="register_label">Register</string>
    <string name="register_header_image_content_description">Register Image</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Re-type Password</string>
    <string name="register_header_image_url">https://goo.gl/Qp1L5M</string>
    <string name="register_button_label">Register</string>
    <string name="register_login_button_label">Login</string>
    <string name="invalid_email_input_msg">Invalid Email</string>
    <string name="invalid_password_matching_msg">Passwords should matched</string>
    <string name="invalid_password_signature_msg">Password should contains at least one symbol, and 6–20 numbers</string>
    <string name="registration_error_msg">an error occurred, Try again later.</string>
    <string name="list_item_countries_name_label">Egypt</string>
    <string name="sign_out_menu_title">Sign out</string>
</resources>
