<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity">

        <ImageView
            android:id="@+id/registerHeaderImage"
            style="@style/RegisterHeaderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/registerLabel"
            style="@style/RegisterLabelStyle"
            app:layout_constraintBottom_toBottomOf="@+id/registerHeaderImage"
            app:layout_constraintEnd_toEndOf="@+id/registerHeaderImage"
            app:layout_constraintStart_toStartOf="@+id/registerHeaderImage" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registerEmailTextInputLayout"
            style="@style/RegisterEmailTextLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerLabel">

            <EditText
                android:id="@+id/registerEmailEditText"
                style="@style/RegisterEmailEditTextStyle"
                android:hint="@string/register_email_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registerPasswordTextInputLayout"
            style="@style/RegisterPasswordTextLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailTextInputLayout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/registerPasswordEditText"
                style="@style/RegisterPasswordEditTextStyle"
                android:hint="@string/register_password_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/registerPasswordConfirmTextInputLayout"
            style="@style/RegisterPasswordConfirmTextLayoutStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextInputLayout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordConfirmEditText"
                style="@style/RegisterPasswordConfirmEditTextStyle"
                android:hint="@string/register_confirm_password_hint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registerUserButton"
            style="@style/RegisterActivityButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordConfirmTextInputLayout" />

        <Button
            android:id="@+id/loginButton"
            style="@style/RegisterActivityLoginButtonStyle"
            android:text="@string/register_login_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>